Modified index pages

--- a/pages/index.html
+++ b/pages/index.html
@@ -23,7 +23,10 @@
             <ul>
                 <li>Kpop sensation (album recommendation?)</li>
                 <li>My personal experience with First Robotics</li>
-                <li>Men I simp for (Hottie Shawties)</li>
+                <li>Men I simp for (Hottie Shawties)(Polly rates them bc polly comes first)</li>
+                <li>Recipes</li>
+                <li>Manifestation 101 with Sab</li>
+
             </ul>
         </p>
     </body>
