modified index and stylesheet

--- a/pages/index.html
+++ b/pages/index.html
@@ -18,6 +18,13 @@
             </ul>
         </p>
 
+        <p>
+            <h3>Archive</h3>
+            <ul>
+                <li><a href = 0920.html>National Day of Truth and Reconciliation</a></li>
+            </ul>
+        </p>
+
         <h3>Coming Soon!</h3>
         <p>
             <ul>
@@ -26,6 +33,7 @@
                 <li>Men I simp for (Hottie Shawties)(Polly rates them bc polly comes first)</li>
                 <li>Recipes</li>
                 <li>Manifestation 101 with Sab</li>
+                <li>Archive</li>
 
             </ul>
         </p>
