--- a/pages/index.html
+++ b/pages/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Sab is fab</title>
+        <title>This is random</title>
         <link rel="stylesheet" href="/stylesheet.css">
     </head>
 
