--- a/pages/index.html
+++ b/pages/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta name="viewport" content="with=device-width, initial scale=1.0">
         <meta charset="utf-8">
         <title>This is random</title>
-        <link rel="stylesheet" href="/stylesheet.css">
+        <link rel="stylesheet" href="../stylesheet.css">
     </head>
 
     <body>
+        <section class="header">
+            <nav>
+                <a href=""><img class="img" src="../images/logo.png" alt="Logo" style="height: 70px; width: 70px;"></a>
+                <div class="nav-links">
+                    <ul>
+                        <li><a href="">HOME</a></li>
+                        <li><a href="">BLOGS</a></li>
+                        <li><a href="">ARCHIVE</a></li>
+                        <li><a href="">ABOUT ME</a></li>
+                    </ul>
+                </div>  
+            </nav>
+
+        </section>
+
+
         <h1>Sabrina's Blog</h1>
 
         <h3>Table of Contents</h3>
