Modified index and stylesheet

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,6 +5,9 @@
         <meta charset="utf-8">
         <title>This is random</title>
         <link rel="stylesheet" href="../stylesheet.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -21,39 +24,31 @@
                 </div>  
             </nav>
 
+        <div class="text-box">
+            <h1>Sabrina's Blog</h1>
+            <p>Innovation Time Project 2021-22</p>
+            <a href="" class="hero-btn">Read More</a>
+        </div>
+
         </section>
 
+<section class="">
+    <h3>Coming Soon!</h3>
+    <p>
+        <ul>
+            <li>Kpop sensation (album recommendation?)</li>
+            <li>My personal experience with First Robotics</li>
+            <li>Men I simp for (Hottie Shawties)(Polly rates them bc polly comes first)</li>
+            <li>Recipes</li>
+            <li>Manifestation 101 with Sab</li>
+            <li>Archive</li>
 
-        <h1>Sabrina's Blog</h1>
+        </ul>
+    </p>
 
-        <h3>Table of Contents</h3>
+</section>
+        
 
-        <p>
-            <ul>
-                <li><a href=></a></li>
-                 
-            </ul>
-        </p>
-
-        <p>
-            <h3>Archive</h3>
-            <ul>
-                <li><a href = 0920.html>National Day of Truth and Reconciliation</a></li>
-            </ul>
-        </p>
-
-        <h3>Coming Soon!</h3>
-        <p>
-            <ul>
-                <li>Kpop sensation (album recommendation?)</li>
-                <li>My personal experience with First Robotics</li>
-                <li>Men I simp for (Hottie Shawties)(Polly rates them bc polly comes first)</li>
-                <li>Recipes</li>
-                <li>Manifestation 101 with Sab</li>
-                <li>Archive</li>
-
-            </ul>
-        </p>
     </body>
 
 </html>
