--- a/pages/index.html
+++ b/pages/index.html
@@ -6,8 +6,10 @@
         <title>This is random</title>
         <link rel="stylesheet" href="../stylesheet.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
+        <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
+
     </head>
 
     <body>
@@ -30,7 +32,51 @@
             <a href="./blogs.html" class="hero-btn">Read More</a>
       
         </div>
+        </section>
+
+        <!--Coming Soon-->
+        <section class="comingSoon">
+            <h1>Coming Soon!</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+            <div class="row">
+                <div class="cs-col">
+                    <h3>Kpop sensation</h3>
+                    <p>Album recommendation because I am obsessed.</p>
+                </div>
+
+                <div class="cs-col">
+                    <h3>Manifestation</h3>
+                    <p>Law of Assumption. Neville Goddard. Self-concepts. <br>You name it because I know everything.</p>
+                </div>
+
+                <div class="cs-col">
+                    <h3>My experience with Robotics</h3>
+                    <p>How 2022 really helped me discovered my interests and strengths.</p>
+                </div>
+            </div>
+
+        </section>
+
+
+        <!-- Footer -->
      
+        <section class="footer">
+            <h4>About Me</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+                dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore <br> eu 
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
+                mollit anim id est laborum.</p>
+
+                <div class="icons">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                    <i class="fab fa-github"></i>
+                    <i class="fab fa-linkedin" aria-hidden="true"></i>
+                </div>
+                <p>Made with <i class="far fa-heart"></i> by Sabrina</p>
+
+        </section>
 
     </body>
 
