--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -33,10 +33,45 @@
         <!--Blog Content-->
 
         <section class="blog-content">
-            <div class="categories">
-                <h3>Categories</h3>
-                <div>
-                
+
+            <div class="row">
+                <div class="blog-left">
+                    <h2>Blog A</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+                        dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore <br> eu 
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
+                        mollit anim id est laborum.</p>
+                        <br>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+                            dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+                            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore <br> eu 
+                            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
+                            mollit anim id est laborum.</p>
+                        <br>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+                            dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+                            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore <br> eu 
+                            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
+                            mollit anim id est laborum.</p>
+                </div>
+
+                            
+                <div class="blog-right">
+                    <div class="categories">
+                        <h3>Categories</h3>
+                        <div>
+                            <span>Social Issues</span>
+                        </div>
+
+                        <div>
+                            <span>Nobody Asked</span>
+                        </div>
+
+                        <div>
+                            <span>Music</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
