--- a/pages/index.html
+++ b/pages/index.html
@@ -15,7 +15,7 @@
     <body>
         <section class="header">
             <nav>
-                <a href=""><img class="img" src="../images/logo.png" alt="Logo" style="height: 70px; width: 70px;"></a>
+                <a href=""><img class="img" src="../images/pnglogo.png" alt="Logo" style="height: 70px; width: 70px;"></a>
                 <div class="nav-links">
                     <ul>
                         <li><a href="./index.html">HOME</a></li>
